# shix

./: README.md  pyproject.toml
shix/: __init__.py  cli.py  fuzzy.py  history.py  ollama.py  sanitize.py  tui.py
