[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shix"
version = "0.1.0"
description = "Find and run shell commands using natural language, powered by your shell history and local AI"
readme = {text = "Find and run shell commands using natural language.", content-type = "text/plain"}
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
local = ["httpx>=0.25.0"]

[project.scripts]
shix = "shix.cli:app"
