[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shix"
version = "0.1.1"
description = "Find and run shell commands using natural language, powered by your shell history and local AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nicolaj Larsen", email = "nicolajlarsen@hotmail.dk" },
]
keywords = ["cli", "shell", "history", "command", "search", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
local = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://github.com/nicla97/shix"
Repository = "https://github.com/nicla97/shix"
Issues = "https://github.com/nicla97/shix/issues"

[project.scripts]
shix = "shix.cli:app"
